[package]
name = "scopeguard"
version = "0.2.0"

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/scopeguard"
documentation = "https://bluss.github.io/scopeguard/"
authors = ["bluss"]

description = """
A RAII scope guard that will run a given closure when it goes out of scope,
even if the code between panics.
"""

keywords = ["scope-guard", "defer", "panic"]
