[package]
name = "scopeguard"
version = "1.1.0"

license = "MIT OR Apache-2.0"
repository = "https://github.com/bluss/scopeguard"
documentation = "https://docs.rs/scopeguard/"
authors = ["bluss"]

description = """
A RAII scope guard that will run a given closure when it goes out of scope,
even if the code between panics (assuming unwinding panic).

Defines the macros `defer!`, `defer_on_unwind!`, `defer_on_success!` as
shorthands for guards with one of the implemented strategies.
"""

keywords = ["scope-guard", "defer", "panic", "unwind"]
categories = ["rust-patterns", "no-std"]

[dependencies]
# Special dependencies used in rustc-dep-of-std mode.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = '0.1.49', optional = true }

[features]
default = ["use_std"]
use_std = []
rustc-dep-of-std = ["core", "compiler_builtins"]

[package.metadata.release]
no-dev-version = true
